kubernetes/java-app/JavaAppDeploymentConfig.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: videos-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: videos-api
  template:
    metadata:
      labels:
        app: videos-api
    spec:
      containers:
        - name: videos-api
          image: alecigolini/hackaton-videosapi:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "400m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: videos-api
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: videos-api
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: videos-api-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: videos-api
                port:
                  number: 80
